--- a/CD_RECYCLE/CD_RECYCLE/Base.lproj/Main.storyboard
+++ b/CD_RECYCLE/CD_RECYCLE/Base.lproj/Main.storyboard
@@ -24,6 +24,14 @@
                                     <segue destination="toY-Hd-0mG" kind="show" id="1lS-Ir-QsY"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BdX-SA-TyU">
+                                <rect key="frame" x="201" y="433" width="116" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="내 주변 수거함 찾기"/>
+                                <connections>
+                                    <segue destination="oFB-an-kKR" kind="show" id="osU-TV-Uh9"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -73,6 +81,14 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gWc-2H-ljl">
+                                <rect key="frame" x="149" y="728" width="116" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="내 주변 수거함 찾기"/>
+                                <connections>
+                                    <segue destination="oFB-an-kKR" kind="show" id="xJx-X3-Q3h"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LTe-aa-CPW">
                                 <rect key="frame" x="92" y="639" width="49" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -94,6 +110,22 @@
             </objects>
             <point key="canvasLocation" x="1773.913043478261" y="69.642857142857139"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="m6Q-Nm-Xw6">
+            <objects>
+                <viewController id="oFB-an-kKR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RuB-m0-ZF9">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="0TG-A8-5PI"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="g1W-13-YUx"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sh3-CP-0XP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1774" y="760"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="ZuQ-lG-fkm">
             <objects>
@@ -113,6 +145,9 @@
             <point key="canvasLocation" x="66.666666666666671" y="69.642857142857139"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="xJx-X3-Q3h"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="camera" catalog="system" width="128" height="94"/>
         <image name="photo" catalog="system" width="128" height="93"/>
