--- a/CD_RECYCLE/CD_RECYCLE/Main.storyboard
+++ b/CD_RECYCLE/CD_RECYCLE/Main.storyboard
@@ -62,6 +62,9 @@
                                 <rect key="frame" x="85" y="426" width="49" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="camera" catalog="system"/>
+                                <connections>
+                                    <action selector="tappedCameraButton:" destination="toY-Hd-0mG" eventType="touchUpInside" id="2By-6d-nVU"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="mUF-6U-tlS">
                                 <rect key="frame" x="16" y="104" width="343" height="264"/>
